Villanova_Dev1/src/objects/VemEmsSyncJobSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Used to store settings for the EMS-to-VEM event synchronization</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <description>Used to hold the Id of scheduled jobs; needed to identify a job because Salesforce does not expose job names as of 1/27/2012; if they change this, the completed jobs can be identified by name and this field may not be needed</description>
        <label>Job Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Used to store settings</description>
        <label>Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>VEM EMS Sync Job Settings</label>
</CustomObject>